Version 1 -- Mon, 29 Aug 2005 11:02:26 +0200
	* Initial release