@@ -1,2 +1,5 @@
+Version 2 -- Mon, 29 Aug 2005 17:06:00 +0200
+	* Remove init.d script
+
 Version 1 -- Mon, 29 Aug 2005 11:02:26 +0200
 	* Initial release
